fixed collapsed navbar issue by adding Bootstrap Scripts into each html page.

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ background: #142c4c;
     background-color: #ffffff;
 }
 
-.navigation {
+.navbar {
 color:whitesmoke;
 background-color: #142c4c;
 }
